--- a/_config.yml
+++ b/_config.yml
@@ -21,21 +21,21 @@ repository               : "sergeiwallace.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "files/Sergei Wallace - Selfie with Jenny in Knoxville - 1600 x 1600px - 1MB.jpeg"
   name             : "Sergei Wallace"
   pronouns         : "he/him/they"  
-  bio              : "Software engineer with my two jr devs <insert cat emojis>"
+  bio              : "software engineer with my two jr devs <insert cat emojis>"
   location         : "NYC"
-  employer         : "Accenture LLC / Accenture Federal Services (AFS)"
+  employer         : "Accenture"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : # "none@example.org" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  orcid            : # "http://orcid.org/yourorcidurl"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
 
   # Repositories and software development
@@ -44,10 +44,10 @@ author:
   dribbble         : # Username
   github           : "sergeiwallace"
   kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  stackoverflow    : "4324058/sergei-wallace" # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : "sergeiwallace.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
