--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Sergei Wallace"
   pronouns         : "he/him/they"  
-  bio              : "software engineer with my two jr devs <insert cat emojis>"
+  bio              : "software engineer with my two jr devs 🐈‍⬛ 🐈"
   location         : "NYC"
   employer         : "Accenture"
   uri              : # URL
